# maspotifybot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  milestones-and-metrics.md  mvp-scope.md  prd-backlog.md  prd-review-checklist.md  pyproject.toml  user-stories-prioritization.md
.claude/: settings.json
.github/workflows/: deploy.yml
app/: config.py  main.py  utils.py
app/bot/: __init__.py  callbacks.py  core.py  handlers.py  session_manager.py
app/bot/commands/: admin.py  user.py
app/db/: pool.py  schema.py
app/services/: admin_commands.py  ai.py  duplicate_watcher.py  genre_distributor.py  genre_resolver.py  lastfm.py  normalize.py  playlists.py  track_formatter.py  voting.py
app/spotify/: auth.py  monitor.py
docs/architecture/: 01-modules.md  02-database.md  03-flows.md  04-commands.md  05-session-state.md  README.md
scripts/: analyze_genres.py  backup.sh  preview_card.py
tests/: conftest.py  test_access_control.py  test_admin_commands.py  test_classify_duplicates.py  test_core_utils.py  test_duplicate_watcher.py  test_filter_guards.py  test_genre_classifier.py  test_history.py  test_html_escape.py  test_lastfm_genre.py  test_leave_kick.py  test_multi_genre.py  test_normalize.py  test_session_flow.py  test_stats.py  test_voting.py
